tests/fixtures/invalid/pow_bytes_dict_str.py
# Cannot call pow() with Bytes, Dict[str, int], Str
x = pow(b"hello", {"a": 1}, "hello")
